# pytorch-playground

./: .gitignore  pyproject.toml
house_price_prediction/: __main__.py
house_price_prediction/model/: cnn_house_price_prediction.py
quickstart/: __main__.py  predict.py
quickstart/modules/: neural_network.py
support_resistance/: support_resistance.py
